Se agrego uma imagen y datos personales

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 
 </head>
 <body>
-   
+    <img src="assets/cv.png" alt="Foto de kary">
+  <pre> 
+      Nombre: Karina Martínez Guerrero 
+      Edad: 30 años 
+      Domicilio: Mendelsshon 36, int 403 vallejo, Gustavo A. Madero, CDMX. CP 07780 
+      Correo: karysistemas10@gmail.com 
+      Celular: 558687677 
+    
+  </pre> 
+  
 </body>
 </html>
